--- a/package.json
+++ b/package.json
@@ -1,38 +1,57 @@
 {
-  "name": "portafolio",
+  "name": "gustavo-cv",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "@angular/animations": "~17.2.3",
+    "@angular/common": "~17.2.3",
+    "@angular/compiler": "~17.2.3",
+    "@angular/core": "~17.2.3",
+    "@angular/forms": "~17.2.3",
+    "@angular/platform-browser": "~17.2.3",
+    "@angular/platform-browser-dynamic": "~17.2.3",
+    "@angular/router": "~17.2.3",
+    "assert": "^2.1.0",
+    "chart.js": "^4.4.2",
+    "crypto-browserify": "^3.12.0",
+    "firebase": "^10.8.1",
+    "jquery": "^1.12.4",
+    "mailgun-js": "^0.22.0",
+    "path-browserify": "^1.0.1",
+    "rxjs": "~7.8.1",
+    "sweetalert2": "^11.10.5",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "~17.2.1",
+    "@angular/cli": "~17.2.1",
+    "@angular/compiler-cli": "~17.2.3",
+    "@types/jasmine": "~5.1.4",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/jquery": "^3.5.29",
+    "@types/node": "^20.11.22",
+    "codelyzer": "^6.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0",
+    "jasmine-core": "^5.1.2",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.9.2",
+    "tslint": "~6.1.0",
+    "typescript": "~5.3.3"
   }
 }
